@@ -1,6 +1,8 @@
 DIST 2ManDVD-0.8.8.tar.gz 26864266 RMD160 fba45559fb38c672f6247f77256eec8316e9fc23 SHA1 113d1aab3a129d695e5969a89fd78a2c3c1a459d SHA256 779dd3d20e6bbfcb7c395500ff971aa5e569fb8ad36caa7ae215c4853195ee4d
+DIST 2ManDVD-0.9.3.tar.gz 29807471 RMD160 1e5a2a6dd3c035973c666370528bf1d476b0248f SHA1 eed28f5c067b7e266bd9c0f551461895d1168b96 SHA256 14b0dca522500af43c8b2b1f74f74c9af6424baaea2b5f1d5318e31a0ef0a685
 DIST 2ManDVD-0.9.tar.gz 29420956 RMD160 b0c5c33cd69a696bb868d7c0dd1ea9c171a32c56 SHA1 9f99440e31e837430c43a7273e87be23c6f045b4 SHA256 d66bd18a9eb4c732a6500314e79c367825fd1d3bbc24742d6a10e82785b3c7af
 EBUILD 2mandvd-0.8.8.ebuild 1482 RMD160 b7c5937cc2e9fa8f44a747735eb9f976e52e4aad SHA1 7db71541c8787959f43438daa955be88216b3758 SHA256 a82cf0d8ac3da30167f8f05430e71263ccecd5a57cf56f6c1bc0a7763613372f
+EBUILD 2mandvd-0.9.3.ebuild 1485 RMD160 b1a8e40234f8d836525f30c683ca768165cb0abc SHA1 6f77fe319f9e0e2798cf6995f12db13a1a61d2f2 SHA256 0004914d781fad550513973164ab2de893bb2948693196e5cbd59a3ec8c44b58
 EBUILD 2mandvd-0.9.ebuild 1485 RMD160 b1a8e40234f8d836525f30c683ca768165cb0abc SHA1 6f77fe319f9e0e2798cf6995f12db13a1a61d2f2 SHA256 0004914d781fad550513973164ab2de893bb2948693196e5cbd59a3ec8c44b58
-MISC ChangeLog 1749 RMD160 476f57b9e89e288df201f9aba4e2c7e429e0b44b SHA1 1d04c070507b6815169bdfba9d02671a3dd4abd2 SHA256 0ad1bcf49d6e5c37a573d3ae241552080c9e98fe09b5df7278af4075fa01efee
+MISC ChangeLog 1871 RMD160 9cc0dec252c64236788054ed135cc4cdd8ee3920 SHA1 3d4f87eef7f66487a4ce1e6c20fb29ea74ef4c8b SHA256 918c2c3e2f7c61213b2edbbb863242615d3d27d2afa1cb64c97798c9f669eeef
 MISC metadata.xml 294 RMD160 ac4e1baa0a1839ae0a807a9d4b915134788d6aa1 SHA1 82865de14486cb30dc9ebfe6f1aecc9c86c0075b SHA256 209af586ae032f00659b69da17d4186854660be14b244d31aa0bea2005c2c5ba
