@@ -13,11 +13,6 @@
 =dev-python/qscintilla-python-2.4.1_pre*
 =x11-libs/qscintilla-2.4.1_pre*
 
-# Markos Chandars <hwoarang@gentoo.org> (04 Aug 2009)
-# Portage fails to merge it due to unicode names on folders.
-# Awaitting patch from zmedico
-=media-video/2mandvd-0.9
-
 # Markos Chandras <hwoarang@gentoo.org> (25 Jul 2009)
 # Alpha versions are not for everybody :)
 =app-emulation/qtemu-2.0_alpha*
